testdata/invalid/empty_match.pr
// Match with no arms.
main() {
  match x {}
}
